--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-sxzz",
   "version": "0.2.0",
-  "packageManager": "pnpm@9.15.5",
+  "packageManager": "pnpm@10.5.0",
   "description": "A collection of ESLint rules.",
   "type": "module",
   "license": "MIT",
@@ -46,6 +46,8 @@
     "@sxzz/eslint-config": "^5.1.1",
     "@sxzz/prettier-config": "^2.2.0",
     "@types/node": "^22.13.5",
+    "@typescript-eslint/parser": "^8.25.0",
+    "@typescript-eslint/utils": "^8.25.0",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
     "eslint-vitest-rule-tester": "^1.1.0",
@@ -53,7 +55,7 @@
     "tsup": "^8.3.6",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.7"
   },
   "resolutions": {
     "eslint-plugin-sxzz": "workspace:*"
