feat: add `require-package-field` rule

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-sxzz",
   "version": "0.2.0",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.6.1",
   "description": "A collection of ESLint rules.",
   "type": "module",
   "license": "MIT",
@@ -44,18 +44,19 @@
   },
   "devDependencies": {
     "@sxzz/eslint-config": "^5.2.0",
-    "@sxzz/prettier-config": "^2.2.0",
-    "@types/node": "^22.13.8",
-    "@typescript-eslint/parser": "^8.25.0",
-    "@typescript-eslint/utils": "^8.25.0",
+    "@sxzz/prettier-config": "^2.2.1",
+    "@types/node": "^22.13.9",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@typescript-eslint/utils": "^8.26.0",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
     "eslint-vitest-rule-tester": "^1.1.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.7"
+    "vitest": "^3.0.8"
   },
   "resolutions": {
     "eslint-plugin-sxzz": "workspace:*"
