--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
     "eslint-vitest-rule-tester": "^2.1.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.5.3",
-    "rollup": "^4.35.0",
-    "rollup-plugin-dts": "^6.1.1",
-    "tsdown": "^0.6.5",
+    "tsdown": "^0.8.0-beta.4",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "vitest": "^3.0.8"
