--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.5.3",
     "tsdown": "^0.12.3",
+    "tsgo-dev": "^2025.6.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
@@ -62,7 +63,8 @@
     "node": ">=20.18.0"
   },
   "resolutions": {
-    "eslint-plugin-sxzz": "workspace:*"
+    "eslint-plugin-sxzz": "workspace:*",
+    "rolldown-plugin-dts": "https://pkg.pr.new/sxzz/rolldown-plugin-dts@43"
   },
   "prettier": "@sxzz/prettier-config"
 }
