--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,3 +9,6 @@ on:
 jobs:
   unit-test:
     uses: sxzz/workflows/.github/workflows/unit-test.yml@v1
+    with:
+      skip-lint: true
+      test: pnpm lint && pnpm typecheck && pnpm test
