--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "url": "https://github.com/sxzz/eslint-plugin-sxzz/issues"
   },
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/index.mjs",
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": [
     "dist",
     "eslint-typegen.d.ts"
