--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-plugin-sxzz",
   "type": "module",
   "version": "0.4.2",
-  "packageManager": "pnpm@10.28.0",
+  "packageManager": "pnpm@10.29.2",
   "description": "A collection of ESLint rules.",
   "author": "Kevin Deng <sxzz@sxzz.moe>",
   "license": "MIT",
@@ -19,8 +19,6 @@
     ".": "./dist/index.mjs",
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "files": [
     "dist",
@@ -47,22 +45,23 @@
     "eslint": "*"
   },
   "devDependencies": {
-    "@sxzz/eslint-config": "^7.4.5",
-    "@sxzz/prettier-config": "^2.2.6",
-    "@types/node": "^25.0.9",
-    "@typescript-eslint/parser": "^8.53.0",
-    "@typescript-eslint/utils": "^8.53.0",
-    "@typescript/native-preview": "^7.0.0-dev.20260118.1",
-    "bumpp": "^10.4.0",
-    "eslint": "^9.39.2",
+    "@sxzz/eslint-config": "^7.7.0",
+    "@sxzz/prettier-config": "^2.3.1",
+    "@types/node": "^25.2.2",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@typescript-eslint/utils": "^8.54.0",
+    "@typescript/native-preview": "^7.0.0-dev.20260209.1",
+    "bumpp": "^10.4.1",
+    "eslint": "^10.0.0",
     "eslint-typegen": "^2.3.0",
-    "eslint-vitest-rule-tester": "^3.0.1",
+    "eslint-vitest-rule-tester": "^3.1.0",
     "jsonc-eslint-parser": "^2.4.2",
-    "prettier": "^3.8.0",
-    "tsdown": "^0.19.0",
+    "prettier": "^3.8.1",
+    "tsdown": "^0.20.3",
+    "tsdown-preset-sxzz": "^0.3.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   },
   "resolutions": {
     "eslint-plugin-sxzz": "workspace:*"
