--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-plugin-sxzz",
   "type": "module",
   "version": "0.4.3",
-  "packageManager": "pnpm@10.29.2",
+  "packageManager": "pnpm@10.29.3",
   "description": "A collection of ESLint rules.",
   "author": "Kevin Deng <sxzz@sxzz.moe>",
   "license": "MIT",
@@ -42,15 +42,15 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
-    "eslint": "*"
+    "eslint": "^9.15.0 || ^10.0.0"
   },
   "devDependencies": {
-    "@sxzz/eslint-config": "^7.7.0",
+    "@sxzz/eslint-config": "^7.7.2",
     "@sxzz/prettier-config": "^2.3.1",
-    "@types/node": "^25.2.2",
-    "@typescript-eslint/parser": "^8.54.0",
-    "@typescript-eslint/utils": "^8.54.0",
-    "@typescript/native-preview": "^7.0.0-dev.20260209.1",
+    "@types/node": "^25.2.3",
+    "@typescript-eslint/parser": "^8.56.0",
+    "@typescript-eslint/utils": "^8.56.0",
+    "@typescript/native-preview": "^7.0.0-dev.20260217.1",
     "bumpp": "^10.4.1",
     "eslint": "^10.0.0",
     "eslint-typegen": "^2.3.0",
@@ -58,7 +58,7 @@
     "jsonc-eslint-parser": "^2.4.2",
     "prettier": "^3.8.1",
     "tsdown": "^0.20.3",
-    "tsdown-preset-sxzz": "^0.3.2",
+    "tsdown-preset-sxzz": "^0.3.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
